# TitanX

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  README.zh.md  SECURITY.md  demo.py  package-lock.json  package.json  pyproject.toml  run_gateway.py  tsconfig.json
docs/: sidecar-rfc.md
examples/: README.md  hello.wasm  hello.wat
sidecar/: Cargo.toml  README.md
sidecar/src/: main.rs
sidecar/wasm-smoke-hello/: Cargo.toml  README.md
sidecar/wasm-smoke-hello/src/: main.rs
sidecar/wit/: titanx.wit
src/: demo.ts  factory.ts  index.ts  runtime.ts  state.ts  types.ts
src/context/: compactor.ts  index.ts  types.ts
src/gateway/: server.ts  types.ts
src/gateway/routes/: chat.ts  jobs.ts  logs.ts  memory.ts
src/policy/: audit-log.ts  break-glass.ts  index.ts  policy-store.ts  types.ts
src/resilience/: circuit-breaker.ts  index.ts  resilient-backend.ts  retry.ts
src/retrieval/: hybrid.ts  index.ts  mmr.ts  types.ts
src/safety/: index.ts  patterns.ts  redactor.ts  safety-layer.ts  validator.ts
src/sandbox/: index.ts  path-guard.ts  router.ts  session-manager.ts  tool-runtime.ts  types.ts
src/sandbox/backends/: docker.ts  e2b.ts  wasm.ts
src/storage/: index.ts  libsql.ts  pg-vector.ts  types.ts
test/: context.test.mjs  docker-backend.test.mjs  e2b-backend.test.mjs  policy.test.mjs  resilience.test.mjs  router.test.mjs  safety.test.mjs  session-manager.test.mjs  tool-runtime.test.mjs  wasm-backend.test.mjs
tests/: _helpers.py  test_audit_module.py  test_audit_sink.py  test_break_glass.py  test_docker_image_pin.py  test_egress_caller_scope.py  test_egress_guard.py  test_egress_per_tool.py  test_egress_presets.py  test_gateway_hardening.py  test_libsql_cosine.py  test_outbound_secret_scan.py  test_path_guard.py  test_policy_read_write_split.py  test_retry.py  test_runtime_lifecycle.py  test_sandbox_router.py  test_session_manager.py  test_sidecar_adapter.py  test_sidecar_smoke.py  test_ssrf_private.py
tests/fixtures/: wasm_hello.wasm
titanx/: __init__.py  audit.py  cli.py  factory.py  runtime.py  state.py  types.py
titanx/context/: __init__.py  compactor.py  types.py
titanx/gateway/: __init__.py  server.py  session_registry.py  types.py
titanx/gateway/routes/: __init__.py  chat.py  jobs.py  logs.py  memory.py
titanx/policy/: __init__.py  audit_log.py  audit_sinks.py  break_glass.py  policy_store.py  types.py  validation.py
titanx/resilience/: __init__.py  circuit_breaker.py  resilient_backend.py  retry.py
titanx/retrieval/: __init__.py  hybrid.py  mmr.py  types.py
titanx/safety/: __init__.py  egress.py  normalization.py  patterns.py  redactor.py  safety_layer.py  secret_scan.py  validator.py
titanx/safety/presets/: __init__.py  brave_search.py  composio.py  discord.py  github.py  google.py  huggingface.py  npm_registry.py  pypi.py  slack.py  telegram.py
titanx/sandbox/: __init__.py  path_guard.py  router.py  session_manager.py  tool_runtime.py  types.py
titanx/sandbox/backends/: __init__.py  docker.py  e2b.py  sidecar.py  wasm.py
titanx/storage/: __init__.py  libsql.py  pg_vector.py  types.py
titanx/tools/: __init__.py  ironclaw_wasm.py
ui/: index.html
