[project]
name = "titanx"
version = "0.1.0"
description = "Agent SDK with explicit runtime semantics, multi-layer security, and sandboxed tool execution"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "aiofiles>=23.2.1",
    # storage
    "asyncpg>=0.29.0",
    "libsql-client>=0.3.0",
    # sandbox
    "wasmtime>=22.0.0",
    "aiodocker>=0.21.0",
    "e2b>=0.17.0",
    # retrieval / embeddings (optional)
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["titanx*"]
